# desktop

./: .cursorrules  package-lock.json  package.json  vite.config.ts
.cursor/rules/: tauri-agent.mdc
livkit-integration/: package.json
livkit-integration/app/: layout.tsx  page.tsx
livkit-integration/app/api/call-records/: route.ts
livkit-integration/app/api/chat/: route.ts
livkit-integration/app/api/rooms/: route.ts
livkit-integration/app/components/: AIChatModal.tsx
livkit-integration/app/rooms/[roomName]/: PageClientImpl.tsx  page.tsx
livkit-integration/lib/: SimpleControls.tsx  TranscriptionModal.tsx
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: audio_capture.rs  lib.rs  main.rs
src/components/: SystemAudioCapture.tsx
src/components/room/: Room.tsx  SystemAudioIntegration.tsx
src/lib/: SettingsMenu.tsx  SimpleControls.tsx  audio-utils.ts  connection-service.ts  tauri-utils.ts
src/styles/: room.css
